--- a/02 - JS + CSS Clock/index.html
+++ b/02 - JS + CSS Clock/index.html
@@ -84,10 +84,12 @@
 
     const minutes = now.getMinutes();
     const minutesDegrees = ((minutes / 60) * 360) + 90;
+    // const minsDegrees = ((mins / 60) * 360) + ((seconds/60)*6) + 90;
     minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
 
     const hours = now.getHours();
     const hoursDegrees = ((hours / 12) * 360) + 90;
+    // const hourDegrees = ((hour / 12) * 360) + ((mins/60)*30) + 90;
     hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
   }
 
